# object-store-python

./: .bandit  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  justfile  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
docs/: index.md  reference.md
examples/: object_store.ipynb
object-store/: Cargo.toml  README.md  pyproject.toml
object-store-internal/: Cargo.toml
object-store-internal/src/: builder.rs  file.rs  lib.rs  utils.rs
object-store/object_store/: __init__.py  _internal.pyi  arrow.py
object-store/python/object_store/: __init__.py  _internal.pyi
object-store/src/: builder.rs  file.rs  filesystem.rs  lib.rs  prefix.rs  settings.rs  utils.rs
object-store/src/config/: aws.rs  azure.rs  google.rs  mod.rs
object-store/tests/: test_arrow.py  test_object_store.py
