[tool.poetry]
name = "object-stores"
version = "0.1.0"
description = "Python bindings and integrations for the rust object_store crate."
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pyarrow = ">=9"

[tool.poetry.group.dev.dependencies]
black = "^22.12"
maturin = "^0.14"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-datadir = "^1.3.1"
ipykernel = "^6.15.2"
pytest-cov = "^3.0.0"
ruff = "^0.0.176"

[tool.poetry.group.examples.dependencies]
duckdb = "^0.5.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3"
mkdocs-material = "^8.4.3"
mkdocstrings = { version = "^0.19.0", extras = ["python"] }

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
exclude = [
  '__pycache__',
  '.git',
  '.ipynb_checkpoints',
  '.venv',
  '.tox',
  '.mypy_cache',
  '.pytest_cache',
  '.vscode',
  '.github',
  'build',
  'dist',
  'typestubs',
  '*.pyi',
]
ignore = ['E501']
line-length = 120
select = ['B', 'C', 'E', 'F', "I", "S", 'W']

[tool.ruff.per-file-ignores]
# allow asserts in test files (bandit)
"test_*" = ["S101"]

[tool.ruff.isort]
known-first-party = ["object_store"]

[tool.pyright]
pythonVersion = 3.8
venvPath = "."
venv = ".venv"

[tool.coverage.report]
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "except ImportError",
  "if TYPE_CHECKING:",
  "from typing_extensions import ",
]
