[tool.poetry]
name = "object-stores"
version = "0.1.0"
description = "Python bindings and integrations for the rust object_store crate."
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
object-store-python = { path = "object-store/", develop = true, extras = [
  "pyarrow",
  "mlflow",
] }

[tool.poetry.group.dev.dependencies]
maturin = "^1.7"
pre-commit = "^3.8"
pytest = "^8"
pytest-datadir = ">=1.3.1"
ipykernel = ">=6.15.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.6"
pytest-benchmark = "^4.0.0"

[tool.poetry.group.examples.dependencies]
duckdb = "^1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4"
mkdocs-material = "^9"
mkdocstrings = { version = ">=0.25", extras = ["python"] }

[tool.black]
color = true
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
exclude = [
  '__pycache__',
  '.git',
  '.ipynb_checkpoints',
  '.venv',
  '.tox',
  '.mypy_cache',
  '.pytest_cache',
  '.vscode',
  '.github',
  'build',
  'dist',
  'typestubs',
  '*.pyi',
]
line-length = 120

[tool.ruff.lint]
ignore = ['E501']
select = ['B', 'C4', 'E', 'F', "I", "S", 'W']

[tool.ruff.lint.per-file-ignores]
# allow asserts in test files (bandit)
"test_*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["object_store"]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = true
venvPath = "."
venv = ".venv"

[tool.coverage.report]
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "except ImportError",
  "if TYPE_CHECKING:",
  "from typing_extensions import ",
]
