[package]
name = "object-store-python"
version = "0.1.0"
edition = "2021"
authors = ["Robert Pack <robstar.pack@gmail.com>"]

[dependencies]
futures = "0.3"
object_store = "0.4"
pyo3 = { version = "0.17.1", features = [
  "extension-module",
  "abi3",
  "abi3-py38",
] }
tokio = { version = "1.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }
url = "2.3"

# reqwest is pulled in by object store, but not used by python binding itself
# for binary wheel best practice, statically link openssl
reqwest = { version = "*", features = ["native-tls-vendored"] }

[lib]
name = "object_store"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "object_store._internal"
