[package]
name = "object-store-python"
version = "0.1.10"
edition = "2021"
authors = ["Robert Pack <robstar.pack@gmail.com>"]
description = "A generic object store interface for uniformly interacting with AWS S3, Google Cloud Storage, Azure Storage and local files."

[dependencies]
object-store-internal = { path = "../object-store-internal" }
pyo3 = { version = "0.21", features = [
  "extension-module",
  "abi3",
  "abi3-py38",
] }

[lib]
name = "object_store"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "object_store._internal"
