[build-system]
requires = ["maturin>=0.14,<0.15", "typing_extensions"]
build-backend = "maturin"

[project]
name = "object-store-python"
version = "0.0.7"
requires-python = ">=3.8"
readme = "README.md"
keywords = ["object-store", "azure", "aws", "gcp"]
authors = [{ name = "Robert Pack", email = "robstar.pack@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Environment :: MacOS X",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
pyarrow = ["pyarrow>=7.0"]

[project.urls]
repository = "https://github.com/roeap/object-store-python"
issues = "https://github.com/roeap/object-store-python/issues"

[tool.maturin]
bindings = "pyo3"
sdist-include = ["Cargo.lock"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "except ImportError",
  "if TYPE_CHECKING:",
  "from typing_extensions import ",
]
